fix crazy clipping problem

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -97,7 +97,7 @@ object, embed, video, iframe {
         }
 
         @media screen and (min-width: 700px) {
-            height: 405px;
+            height: 393px;
             width: 700px;
         }
 
@@ -115,7 +115,7 @@ object, embed, video, iframe {
             }
 
             @media screen and (min-width: 700px) {
-                height: 405px !important;
+                height: 393px !important;
                 width: 700px !important;
             }
         }
@@ -131,7 +131,7 @@ object, embed, video, iframe {
             }
 
             @media screen and (min-width: 700px) {
-                height: 405px !important;
+                height: 393px !important;
                 width: 700px !important;
             }
         }
@@ -141,6 +141,23 @@ object, embed, video, iframe {
             -moz-background-size:cover;
             -o-background-size:cover;
             background-size:cover;
+        }
+
+        div.mejs-poster {
+            height: 360px !important;
+            position: relative;
+            top: 0;
+            width: 640px !important;
+
+            @media screen and (max-width: 581px) {
+                height: 325px !important;
+                width: 580px !important;
+            }
+
+            @media screen and (min-width: 700px) {
+                height: 393px !important;
+                width: 700px !important;
+            }
         }
 
         div.mejs-video {
@@ -156,7 +173,7 @@ object, embed, video, iframe {
             }
 
             @media screen and (min-width: 700px) {
-                height: 405px !important;
+                height: 393px !important;
                 width: 700px !important;
             }
 
@@ -170,7 +187,7 @@ object, embed, video, iframe {
                 }
 
                 @media screen and (min-width: 700px) {
-                    height: 405px !important;
+                    height: 393px !important;
                     width: 700px !important;
                 }
 
@@ -242,7 +259,7 @@ object, embed, video, iframe {
                     }
 
                     @media screen and (min-width: 700px) {
-                        height: 405px !important;
+                        height: 393px !important;
                         width: 700px !important;
                     }
                 }
@@ -258,7 +275,7 @@ object, embed, video, iframe {
                     }
 
                     @media screen and (min-width: 700px) {
-                        height: 405px !important;
+                        height: 393px !important;
                         width: 700px !important;
                     }
 
@@ -283,7 +300,7 @@ object, embed, video, iframe {
                             }
 
                             @media screen and (min-width: 700px) {
-                                top: 390px;
+                                top: 379px;
                             }
                         }
 
@@ -658,7 +675,7 @@ object, embed, video, iframe {
                 }
 
                 @media screen and (min-width: 700px) {
-                    top: 393px;
+                    top: 381px;
                     width: 700px;
                 }
 
@@ -1243,7 +1260,7 @@ object, embed, video, iframe {
             }
 
             @media screen and (min-width: 700px) {
-                height: 405px;
+                height: 393px;
                 width: 700px;
             }
 
